--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,59 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/mainResultTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/mainButtonGuideline"
+        android:layout_marginBottom="50dp"
+        tools:layout_editor_absoluteY="195dp"/>
+
     <Button
         android:id="@+id/mainVkButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:text="VK"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/mainFacebookButton"
+        app:layout_constraintBottom_toBottomOf="@id/mainButtonGuideline"
+        app:layout_constraintEnd_toStartOf="@id/mainFacebookButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/mainButtonGuideline"/>
 
     <Button
         android:id="@+id/mainFacebookButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:text="FB"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/mainButtonGuideline"
+        app:layout_constraintEnd_toStartOf="@id/mainGoogleButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/mainVkButton"
+        app:layout_constraintTop_toTopOf="@id/mainButtonGuideline"/>
+
+    <Button
+        android:id="@+id/mainGoogleButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="G"
+        app:layout_constraintBottom_toBottomOf="@id/mainButtonGuideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/mainVkButton"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/mainFacebookButton"
+        app:layout_constraintTop_toTopOf="@id/mainButtonGuideline"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/mainButtonGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_percent="0.56"
+        />
 
 </android.support.constraint.ConstraintLayout>
